@@ -1,5 +1,5 @@
 #
-# $Id: minisvc.in,v 1.29 2021-08-17 13:19:27+05:30 Cprogrammer Exp mbhangui $
+# $Id: minisvc.in,v 1.30 2021-08-26 12:41:46+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -11,7 +11,7 @@ shareddir=@shareddir@
 LOGDIR=@logdir@
 libexecdir=@libexecdir@
 host=@HOST@
-RCSID="# \$Id: minisvc.in,v 1.29 2021-08-17 13:19:27+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: minisvc.in,v 1.30 2021-08-26 12:41:46+05:30 Cprogrammer Exp mbhangui $"
 
 #
 # End of User Configuration
@@ -745,7 +745,7 @@ create_startup()
 			if [ $silent -eq 0 ] ; then
 				echo "Creating /service in /etc/synthetic.conf"
 			fi
-			printf "service\t/private/var/run/svscan\n" > /etc/synthetic.conf
+			printf "service\t/System/Volumes/data@sysconfdir@/sv\n" > /etc/synthetic.conf
 		else
 			grep "^service" /etc/synthetic.conf >/dev/null
 			if [ $? -ne 0 ] ; then
@@ -753,10 +753,10 @@ create_startup()
 					echo "Creating /service in /etc/synthetic.conf"
 				fi
 				if [ -z "$DESTDIR" ] ; then
-					printf "service\t/private/var/run/svscan\n" >> /etc/synthetic.conf
+					printf "service\t/System/Volumes/data@sysconfdir@/sv\n" >> /etc/synthetic.conf
 				else
 				(
-					printf "service\t/private/var/run/svscan\n"
+					printf "service\t/System/Volumes/data@sysconfdir@/sv\n"
 					cat /etc/synthetic.conf
 				) > "$DESTDIR"/etc/synthetic.conf
 				fi
@@ -2733,6 +2733,9 @@ fi
 exit 0
 #
 # $Log: minisvc.in,v $
+# Revision 1.30  2021-08-26 12:41:46+05:30  Cprogrammer
+# use /usr/local/etc/indimail/sv for servicedir on OSX/Darwin
+#
 # Revision 1.29  2021-08-17 13:19:27+05:30  Cprogrammer
 # added --config=cert option
 # added --check-certs option
