@@ -146,6 +146,8 @@ o svscan: ability to run as PID 1 and reap dead children
 62. docker-entrypoint: removed host compoment from default domain
 - 22/08/2021
 63. docker-entrypoint: added -r, --repair option to drop to shell
+- 26/08/2021
+64. svctool: use /usr/local/etc/indimail/sv for servicedir on OSX/Darwin
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
